--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<!--<nav class="navbar navbar-default">
    <div class="container-fluid">
      <div class="navbar-header">
        <a class="navbar-brand" href="#">Angular 2 Router</a>
@@ -9,7 +9,7 @@
 
      </ul>
    </div>
- </nav>
- <div >
+ </nav>-->
+ <div>
     <router-outlet></router-outlet>
-  </div>
+</div>
