--- a/src/assets/css/flite.css
+++ b/src/assets/css/flite.css
@@ -7,6 +7,12 @@
    background-position: center;
    background-repeat: repeat;
    background-size: cover;
+   position:absolute;
+   height:100%;
+   width:100%;
+   z-index:0;
+   top:0;
+   left:0;
 }
 
 .login_logo{
@@ -34,4 +40,10 @@
 
 .nav>li>a:focus, .nav>li>a:hover{
   background:#1a4946;
+}
+
+.list-unstyled li p {
+  font-size: 12px;
+  margin-left: 5%;
+  color: white;
 }
