--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,41 +1,54 @@
-<p>
-  login works!
-</p>
-<div class="login-layout-full login ">
+<!--<div class="bg-full">
+
+</div>-->
+<div class="login-layout-full login">
 <div class="page-brand-info">
   <div class="brand">
     <h1 class="logo_txt">template.tit_main</h1>
     <!--<img class="brand-img" src="http://fliteatm.com/images/home/page1_img6.jpg" alt="..."> </div>-->
-  <p class="font-size-20">
+  <p>
+
     Your one-stop shop for off-premise ATM expansion
   </p>
   <ul class="list-unstyled m-t-md">
     <li>
-      <span class="fa fa-check m-r-xs"></span>
-      Fastest to-market Access
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        Fastest to-market Access
+      </p>
     </li>
     <li>
-      <span class="fa fa-check m-r-xs"></span>
-      Exclusive and Customized Branding
-    </li>
-
-    <li>
-      <span class="fa fa-check m-r-xs"></span>
-      Professionally Managed Facilities
-    </li>
-
-    <li>
-      <span class="fa fa-check m-r-xs"></span>
-      ATM Locations Listings
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        Exclusive and Customized Branding
+      </p>
     </li>
 
     <li>
-      <span class="fa fa-check m-r-xs"></span>
-      Take a 360 Site Tour
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        Professionally Managed Facilities
+      </p>
+    </li>
+
+    <li>
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        ATM Locations Listings
+      </p>
+    </li>
+
+    <li>
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        Take a 360 Site Tour
+      </p>
     </li>
     <li>
-      <span class="fa fa-check m-r-xs"></span>
-      View Drone Video
+      <p>
+        <i class="fa fa-check m-r-xs"></i>
+        View Drone Video
+      </p>
     </li>
 
   </ul>
@@ -59,7 +72,7 @@
       <input required="" placeholder="Password" class="form-control" type="password">
     </div>
     <p ng-if="loading">... Loading dashboards</p>
-    <button class="btn green block full-width bottom15"  ng-click="enter()">Login</button>
+    <button class="btn green block full-width bottom15"  (click)="signIn()">Login</button>
     <a href="#/forgot_password"><small>Forgot password?</small></a>
     <p class="text-muted text-center"><small>Do not have an account?</small></p>
     <a href="register_v2.html" class="btn btn-sm btn-white btn-block">Create an account</a>
